# secure-ai-insights-assistant

./: .dockerignore  .env.example  .gitignore  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
backend/app/agents/: orchestrator.py  planner.py
backend/app/api/v1/: analytics.py  auth.py  chat.py  documents.py  ingestion.py
backend/app/auth/: dependencies.py  security.py
backend/app/common_utils/: logging_utils.py
backend/app/core/: config.py  db.py  exceptions.py
backend/app/evaluation/: evaluator.py
backend/app/guardrails/: __init__.py  guardrails_ai_adapter.py  input_guardrail.py  output_guardrail.py
backend/app/memory/: memory.py
backend/app/models/: __init__.py  db_models.py  schemas.py
backend/app/services/: analytics_service.py  answer_synthesizer.py  evidence_service.py  ingestion_service.py
backend/app/tools/: csv_tool.py  rag_tool.py  sql_tool.py
data/csv/: marketing_spend.csv  movies.csv  regional_performance.csv  reviews.csv  viewers.csv  watch_activity.csv
docker/: Dockerfile  docker-compose.yml
frontend/: Dockerfile  index.html  package.json
frontend/src/: api.js  main.jsx  styles.css
scripts/: generate_demo_data.py  sync_txt_to_pdf.py
tests/: test_backend.py
